fixed: select-minimal widget not aligned correctly in RTL language

--- a/src/widget/select-desktop/selectpicker.scss
+++ b/src/widget/select-desktop/selectpicker.scss
@@ -42,9 +42,12 @@
 
 .or[dir="rtl"] .bootstrap-select {
     .dropdown-toggle {
+        text-align: right;
         .caret {
             margin-left: 0;
             margin-right: 10px;
+            left: 12px;
+            right: auto;
         }
     }
 }
